Removed game files
Cleaned up and removed all mention of game files. Also got rid of PUT operation for scoreController, as there is no reason to update the score once it has been posted.
